# telegram_bot

./: .env.example  .gitignore  .gitmodules  .mcp.json.example  README.md  bridge.py  pyproject.toml
tests/: conftest.py  test_bridge.py  test_functional.py
