[project]
name = "telegram-bot-bridge"
version = "0.1.0"
description = "Telegram bot bridge to Claude Code CLI with MCP servers and long-term memory"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "functional: spawns the real claude CLI + MCP servers; not run by default. Opt in with `pytest -m functional`.",
]
# Default: run unit tests only. Opt into functional with `-m functional`.
addopts = "-m 'not functional'"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
